fix: spacing adjustments

--- a/src/components/pageHeader/pageHeader.module.scss
+++ b/src/components/pageHeader/pageHeader.module.scss
@@ -167,8 +167,9 @@
     width: 100%;
     transition: 0.5s ease-in-out;
     background-color: $neutral-100;
-    border-right: $border-width-100 $neutral-300;
+    border-right: solid $border-width-100 $neutral-300;
     padding-top: $spacer-700;
+    z-index: -1;
   }
 }
 
@@ -198,8 +199,8 @@
   .pageHeader {
     display: flex;
     flex-direction: row;
-    padding: $spacer-400 $spacer-400;
-
+    padding: 0;
+    padding-left: $spacer-400;
     &CTA {
       padding: $spacer-300 $spacer-400;
       background-color: $blue-200;
@@ -220,11 +221,11 @@
     nav {
       position: initial;
       height: auto;
-      padding: 0;
+      padding: $spacer-400 $spacer-400;
       display: flex;
       align-items: flex-end;
       border: none;
-
+      background: $neutral-100;
       ul {
         display: flex;
         flex-direction: row;
@@ -246,7 +247,8 @@
     section {
       width: 30%;
       min-width: 500px;
-      padding-top: 90px;
+      padding-top: calc($spacer-700 + $spacer-600);
+      z-index: -1;
     }
   }
 
@@ -285,6 +287,13 @@
         }
       }
     }
+    &LogoWrapper {
+      max-width: 250px;
+    }
+
+    &Logo {
+      height: $spacer-600;
+    }
   }
   .modal {
     &Wrapper {
@@ -298,12 +307,9 @@
 
 @media only screen and (min-width: 1366px) {
   .pageHeader {
-    padding: $spacer-300 $spacer-400;
-
     nav {
       ul {
         gap: $spacer-500;
-
         li {
           font-size: $font-size-body-large;
           button {
